--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
   <style>
-    /* базовые цвета */
     :root {
       --yellow: #ff0;
       --black:  #0d0d0d;
@@ -16,14 +15,12 @@
       --blue:   #0042ff;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
-
     html, body {
       height: 100%;
       background: var(--yellow);
       font-family: "Segoe UI", sans-serif;
     }
     body {
-      /* чёрный паттерн по центру */
       background-image: url("background.png");
       background-size: cover;
       background-position: center;
@@ -32,8 +29,6 @@
       justify-content: center;
       padding: 20px;
     }
-
-    /* самый внешний контейнер */
     .wizard {
       background: var(--black);
       border-radius: 12px;
@@ -42,7 +37,6 @@
       overflow: hidden;
       box-shadow: 0 4px 16px rgba(0,0,0,0.4);
     }
-    /* Шапка */
     .wizard header {
       background: var(--yellow);
       text-align: center;
@@ -52,21 +46,16 @@
       max-width: 200px;
       height: auto;
     }
-
-    /* шаги */
     .wizard .step {
       padding: 16px;
       display: none;
       color: var(--white);
     }
     .wizard .step.active { display: block; }
-
     .wizard .step h2 {
       margin-bottom: 12px;
       font-size: 1.1rem;
     }
-
-    /* радио и чекбоксы */
     .wizard label {
       display: flex;
       align-items: center;
@@ -79,23 +68,18 @@
       width: 18px;
       height: 18px;
     }
-
-    /* поля и селекты */
     .wizard input,
     .wizard select,
     .wizard textarea {
       width: 100%;
       padding: 8px;
-      margin-top: 4px;
-      margin-bottom: 12px;
+      margin: 4px 0 12px;
       border: 1px solid #444;
       border-radius: 4px;
       background: #222;
       color: var(--white);
     }
     .wizard textarea { resize: vertical; }
-
-    /* кнопки */
     .wizard .buttons {
       display: flex;
       justify-content: space-between;
@@ -121,8 +105,6 @@
       opacity: 0.5;
       cursor: default;
     }
-
-    /* отступ под футер */
     .wizard .step:last-child { padding-bottom: 24px; }
   </style>
 </head>
@@ -199,13 +181,12 @@
     </div>
   </div>
 
-  <!-- Flatpickr и скрипт -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
     const steps  = Array.from(document.querySelectorAll('.step'));
     let   current = 0;
 
-    // 1) Генерация времени
+    // Генерация времени
     const timeSelect = document.getElementById('time-select');
     for (let h = 9; h <= 22; h++) {
       ['00','30'].forEach(m => {
@@ -217,58 +198,44 @@
       });
     }
 
-    // 2) Календарь
+    // Календарь
     flatpickr("#date-picker", {
       dateFormat: "d.m.Y",
       minDate: "today",
       onChange: () => validateStep(1)
     });
 
-    // Показываем нужный шаг
     function showStep(idx) {
       steps.forEach((st,i)=> st.classList.toggle('active', i === idx));
       current = idx;
       validateStep(idx);
-      // Адрес для выезда
       const mode = document.querySelector('input[name="mode"]:checked')?.value;
       document.getElementById('address-container').style.display =
         mode === 'outdoor' ? 'block' : 'none';
     }
 
-    // Включаем/выключаем кнопки «Далее»
     function validateStep(idx) {
       const btn = steps[idx].querySelector('.btn-next');
       let ok = false;
-
-      if (idx === 0) {
-        ok = !!document.querySelector('input[name="mode"]:checked');
-      }
-      if (idx === 1) {
-        ok = !!document.getElementById('date-picker').value && !!timeSelect.value;
-      }
-      if (idx === 2) {
-        ok = (
-          document.getElementById('count').value > 0 &&
-          document.getElementById('program').value &&
-          document.getElementById('age').value > 0 &&
-          document.getElementById('visits').value >= 0 &&
-          document.getElementById('occasion').value.trim() !== '' &&
-          (document.getElementById('address-container').style.display === 'none'
-            || document.getElementById('address').value.trim() !== '')
-        );
-      }
-
+      if (idx === 0) ok = !!document.querySelector('input[name="mode"]:checked');
+      if (idx === 1) ok = !!document.getElementById('date-picker').value && !!timeSelect.value;
+      if (idx === 2) ok = (
+        document.getElementById('count').value > 0 &&
+        document.getElementById('program').value &&
+        document.getElementById('age').value > 0 &&
+        document.getElementById('visits').value >= 0 &&
+        document.getElementById('occasion').value.trim() !== '' &&
+        (document.getElementById('address-container').style.display==='none'
+          || document.getElementById('address').value.trim()!=='')
+      );
       btn.disabled = !ok;
     }
 
-    // Навигация «Далее» / «Назад»
+    // Навигация
     document.querySelectorAll('.btn-next').forEach(b => {
       b.addEventListener('click', () => {
-        if (current < steps.length - 1) {
-          showStep(current + 1);
-        } else {
-          finish();
-        }
+        if (current < steps.length - 1) showStep(current + 1);
+        else finish();
       });
     });
     document.querySelectorAll('.btn-prev').forEach(b => {
@@ -277,13 +244,20 @@
       });
     });
 
-    // При любом вводе — проверяем форму
+    // Реакция на ввод
     steps.forEach((st,i) => {
       st.addEventListener('input',  () => validateStep(i));
       st.addEventListener('change', () => validateStep(i));
     });
 
-    // Отправка данных
+    // Поддержка радио первого шага
+    document.querySelectorAll('input[name="mode"]').forEach(radio => {
+      radio.addEventListener('change', () => validateStep(0));
+    });
+    // Инициализация валидации
+    validateStep(0);
+
+    // Функция finish() с обёрткой для sendData
     function finish() {
       const data = {
         mode:    document.querySelector('input[name="mode"]:checked').value,
@@ -297,13 +271,17 @@
         occasion:document.getElementById('occasion').value
       };
 
-      // шлём боту
-      Telegram.WebApp.sendData(JSON.stringify({
-        action:  'booking',
-        payload: data
-      }));
+      // Отправка в Telegram или лог в консоль
+      if (window.Telegram && Telegram.WebApp && Telegram.WebApp.sendData) {
+        Telegram.WebApp.sendData(JSON.stringify({
+          action:  'booking',
+          payload: data
+        }));
+      } else {
+        console.log('Mock sendData:', data);
+      }
 
-      // показываем благодарность
+      // Показ благодарности
       steps[current].innerHTML = `
         <p style="
           color:white;
