--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
       margin-bottom: 8px;
       cursor: pointer;
     }
-    .wizard input[type="radio"] {
+    .wizard input[type="radio"],
+    .wizard input[type="checkbox"] {
       accent-color: var(--yellow);
       margin-right: 8px;
       width: 18px;
@@ -105,7 +106,18 @@
       opacity: 0.5;
       cursor: default;
     }
-    .wizard .step:last-child { padding-bottom: 24px; }
+    /* Центрируем чекбоксы на шаге 4 */
+    .wizard .step[data-step="4"] #extras-container {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      align-items: flex-start;
+      max-width: 90%;
+      margin: 0 auto 16px;
+    }
+    .wizard .step[data-step="4"] #extras-container label {
+      color: var(--white);
+    }
   </style>
 </head>
 <body>
@@ -115,7 +127,7 @@
       <img src="logo.png" alt="Show Today">
     </header>
 
-    <!-- Шаг 1: формат -->
+    <!-- Шаг 1 -->
     <div class="step active" data-step="1">
       <h2>1. Выберите формат</h2>
       <label><input type="radio" name="mode" value="studio">В студии</label>
@@ -126,7 +138,7 @@
       </div>
     </div>
 
-    <!-- Шаг 2: дата и время -->
+    <!-- Шаг 2 -->
     <div class="step" data-step="2">
       <h2>2. Дата и время</h2>
       <label>Дата:
@@ -143,7 +155,7 @@
       </div>
     </div>
 
-    <!-- Шаг 3: подробности -->
+    <!-- Шаг 3 -->
     <div class="step" data-step="3">
       <h2>3. Подробности</h2>
       <label>Количество человек:
@@ -176,24 +188,74 @@
       </label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
-        <button class="btn-next" id="finish-btn" disabled>Записаться</button>
+        <button class="btn-next" disabled>Далее →</button>
+      </div>
+    </div>
+
+    <!-- Шаг 4 -->
+    <div class="step" data-step="4">
+      <h2>4. Дополнительные услуги</h2>
+      <div id="extras-container">
+        <label><input type="checkbox" name="extras" value="restroom"> Комната отдыха</label>
+        <label><input type="checkbox" name="extras" value="photographer"> Фотограф</label>
+        <label><input type="checkbox" name="extras" value="videographer"> Видеограф</label>
+        <label><input type="checkbox" name="extras" value="disco"> Дискотека</label>
+      </div>
+      <label style="display:block; margin-top:12px; color:var(--white);">
+        Ваши пожелания (необязательно):
+        <textarea id="wishes" rows="3"
+          style="width:100%; padding:8px; margin-top:4px;
+                 background:#222; border:1px solid #444;
+                 color:#fff; border-radius:4px;"
+          placeholder="Например: хотелось бы торт…"></textarea>
+      </label>
+      <div class="buttons" style="margin-top:16px;">
+        <button class="btn-prev">← Назад</button>
+        <button class="btn-next" id="finish-btn">Записаться</button>
       </div>
     </div>
   </div>
 
+  <!-- Кнопка “Готово” -->
+  <button type="button"
+    style="position:fixed;bottom:env(safe-area-inset-bottom,10px);right:10px;
+           padding:8px 12px;background:#444;color:#fff;border:none;
+           border-radius:6px;z-index:1000;"
+    onclick="document.activeElement.blur()"
+  >Готово</button>
+
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    const steps  = Array.from(document.querySelectorAll('.step'));
-    let   current = 0;
+    // Telegram
+    if (window.Telegram && Telegram.WebApp) Telegram.WebApp.ready();
+
+    // Подгоняем высоту
+    function adjustHeight(){
+      document.body.style.height = (window.visualViewport?.height||window.innerHeight)+'px';
+    }
+    window.visualViewport?.addEventListener('resize', adjustHeight);
+    adjustHeight();
+
+    // Шаги
+    const steps = Array.from(document.querySelectorAll('.step'));
+    let current = 0;
+    const timeSelect       = document.getElementById('time-select');
+    const datePicker       = document.getElementById('date-picker');
+    const countEl          = document.getElementById('count');
+    const addrCont         = document.getElementById('address-container');
+    const addrInput        = document.getElementById('address');
+    const programEl        = document.getElementById('program');
+    const ageEl            = document.getElementById('age');
+    const visitsEl         = document.getElementById('visits');
+    const occasionEl       = document.getElementById('occasion');
 
     // Генерация времени
-    const timeSelect = document.getElementById('time-select');
-    for (let h = 9; h <= 22; h++) {
-      ['00','30'].forEach(m => {
-        if (h === 22 && m === '30') return;
+    for (let h=9; h<=22; h++){
+      ['00','30'].forEach(m=>{
+        if (h===22 && m==='30') return;
         const opt = document.createElement('option');
         opt.value       = `${h.toString().padStart(2,'0')}:${m}`;
-        opt.textContent = `${h.toString().padStart(2,'0')}:${m}`;
+        opt.textContent = opt.value;
         timeSelect.append(opt);
       });
     }
@@ -205,83 +267,72 @@
       onChange: () => validateStep(1)
     });
 
-    function showStep(idx) {
-      steps.forEach((st,i)=> st.classList.toggle('active', i === idx));
-      current = idx;
-      validateStep(idx);
+    function showStep(i){
+      steps.forEach((st,idx)=> st.classList.toggle('active', idx===i));
+      current = i; validateStep(i);
       const mode = document.querySelector('input[name="mode"]:checked')?.value;
-      document.getElementById('address-container').style.display =
-        mode === 'outdoor' ? 'block' : 'none';
+      addrCont.style.display = mode==='outdoor'?'block':'none';
+      if (i===3){
+        document.querySelector('.extra-restroom').style.display = mode==='studio'?'flex':'none';
+      }
     }
 
-    function validateStep(idx) {
-      const btn = steps[idx].querySelector('.btn-next');
+    function validateStep(i){
+      const btn = steps[i].querySelector('.btn-next');
       let ok = false;
-      if (idx === 0) ok = !!document.querySelector('input[name="mode"]:checked');
-      if (idx === 1) ok = !!document.getElementById('date-picker').value && !!timeSelect.value;
-      if (idx === 2) ok = (
-        document.getElementById('count').value > 0 &&
-        document.getElementById('program').value &&
-        document.getElementById('age').value > 0 &&
-        document.getElementById('visits').value >= 0 &&
-        document.getElementById('occasion').value.trim() !== '' &&
-        (document.getElementById('address-container').style.display==='none'
-          || document.getElementById('address').value.trim()!=='')
-      );
+      if (i===0){
+        ok = !!document.querySelector('input[name="mode"]:checked');
+      } else if (i===1){
+        ok = !!datePicker.value && !!timeSelect.value;
+      } else if (i===2){
+        ok = Number(countEl.value)>0 &&
+             !!programEl.value &&
+             Number(ageEl.value)>0 &&
+             Number(visitsEl.value)>=0 &&
+             occasionEl.value.trim()!=='' &&
+             (addrCont.style.display==='none'|| addrInput.value.trim()!=='');
+      } else {
+        ok = true;
+      }
       btn.disabled = !ok;
     }
 
-    // Навигация
-    document.querySelectorAll('.btn-next').forEach(b => {
-      b.addEventListener('click', () => {
-        if (current < steps.length - 1) showStep(current + 1);
-        else finish();
-      });
+    document.querySelectorAll('.btn-next').forEach(b=>
+      b.addEventListener('click', ()=> current<steps.length-1? showStep(current+1) : finish())
+    );
+    document.querySelectorAll('.btn-prev').forEach(b=>
+      b.addEventListener('click', ()=> current>0 && showStep(current-1))
+    );
+    steps.forEach((st,i)=>{
+      st.addEventListener('input', ()=> validateStep(i));
+      st.addEventListener('change', ()=> validateStep(i));
     });
-    document.querySelectorAll('.btn-prev').forEach(b => {
-      b.addEventListener('click', () => {
-        if (current > 0) showStep(current - 1);
-      });
-    });
-
-    // Реакция на ввод
-    steps.forEach((st,i) => {
-      st.addEventListener('input',  () => validateStep(i));
-      st.addEventListener('change', () => validateStep(i));
-    });
-
-    // Поддержка радио первого шага
-    document.querySelectorAll('input[name="mode"]').forEach(radio => {
-      radio.addEventListener('change', () => validateStep(0));
-    });
-    // Инициализация валидации
+    document.querySelectorAll('input[name="mode"]').forEach(r=>
+      r.addEventListener('change', ()=> validateStep(0))
+    );
     validateStep(0);
 
-    // Функция finish() с обёрткой для sendData
-    function finish() {
+    function finish(){
+      const extras = Array.from(document.querySelectorAll('input[name="extras"]:checked'))
+                          .map(ch=>ch.value);
       const data = {
-        mode:    document.querySelector('input[name="mode"]:checked').value,
-        date:    document.getElementById('date-picker').value,
-        time:    timeSelect.value,
-        count:   document.getElementById('count').value,
-        address: document.getElementById('address')?.value || '',
-        program: document.getElementById('program').value,
-        age:     document.getElementById('age').value,
-        visits:  document.getElementById('visits').value,
-        occasion:document.getElementById('occasion').value
+        mode:      document.querySelector('input[name="mode"]:checked').value,
+        date:      datePicker.value,
+        time:      timeSelect.value,
+        count:     countEl.value,
+        address:   addrInput.value||'',
+        program:   programEl.value,
+        age:       ageEl.value,
+        visits:    visitsEl.value,
+        occasion:  occasionEl.value,
+        extras,
+        wishes:    document.getElementById('wishes').value.trim()
       };
-
-      // Отправка в Telegram или лог в консоль
-      if (window.Telegram && Telegram.WebApp && Telegram.WebApp.sendData) {
-        Telegram.WebApp.sendData(JSON.stringify({
-          action:  'booking',
-          payload: data
-        }));
+      if (window.Telegram?.WebApp?.sendData){
+        Telegram.WebApp.sendData(JSON.stringify({action:'booking',payload:data}));
       } else {
         console.log('Mock sendData:', data);
       }
-
-      // Показ благодарности
       steps[current].innerHTML = `
         <p style="
           color:white;
