--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Show Today — Бронирование</title>
-  <!-- Flatpickr CSS для календаря -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
   <style>
@@ -20,14 +19,17 @@
       background: var(--yellow);
       font-family: "Segoe UI", sans-serif;
     }
-    body {
-      background-image: url("background.png");
-      background-size: cover;
-      background-position: center;
+    .wrapper {
+      height: 100%;
+      overflow-y: auto;
       display: flex;
-      align-items: center;
       justify-content: center;
-      padding: 20px;
+      padding: 20px 0;
+    }
+    /* Если нужно — активировать только на мобильниках */
+    body.keyboard-open .wrapper {
+      justify-content: flex-start;
+      padding-top: env(safe-area-inset-top,20px);
     }
     .wizard {
       background: var(--black);
@@ -36,313 +38,256 @@
       max-width: 380px;
       overflow: hidden;
       box-shadow: 0 4px 16px rgba(0,0,0,0.4);
+      margin-bottom: 20px;
     }
     .wizard header {
       background: var(--yellow);
       text-align: center;
       padding: 16px;
     }
-    .wizard header img {
-      max-width: 200px;
-      height: auto;
-    }
-    .wizard .step {
-      padding: 16px;
-      display: none;
-      color: var(--white);
-    }
-    .wizard .step.active { display: block; }
-    .wizard .step h2 {
-      margin-bottom: 12px;
-      font-size: 1.1rem;
-    }
-    .wizard label {
-      display: flex;
-      align-items: center;
-      margin-bottom: 8px;
-      cursor: pointer;
-    }
-    .wizard input[type="radio"],
-    .wizard input[type="checkbox"] {
+    .wizard header img { max-width:200px; height:auto }
+    .wizard .step { padding:16px; display:none; color:var(--white) }
+    .wizard .step.active { display:block }
+    .wizard .step h2 { margin-bottom:12px; font-size:1.1rem }
+    .wizard label { display:flex; align-items:center; margin-bottom:8px; cursor:pointer }
+    .wizard input[type="radio"], .wizard input[type="checkbox"] {
       accent-color: var(--yellow);
-      margin-right: 8px;
-      width: 18px;
-      height: 18px;
+      margin-right:8px; width:18px; height:18px;
     }
-    .wizard input,
-    .wizard select,
-    .wizard textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 4px 0 12px;
-      border: 1px solid #444;
-      border-radius: 4px;
-      background: #222;
-      color: var(--white);
+    .wizard input, .wizard select, .wizard textarea {
+      width:100%; padding:8px; margin:4px 0 12px;
+      border:1px solid #444; border-radius:4px;
+      background:#222; color:var(--white);
     }
-    .wizard textarea { resize: vertical; }
+    .wizard textarea { resize:vertical }
     .wizard .buttons {
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
+      display:flex; justify-content:space-between; gap:8px;
     }
     .wizard button {
-      flex: 1;
-      padding: 10px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      flex:1; padding:10px; font-size:1rem;
+      border:none; border-radius:6px; cursor:pointer;
     }
-    .wizard .btn-next {
-      background: var(--blue);
-      color: var(--white);
-    }
-    .wizard .btn-prev {
-      background: #444;
-      color: var(--white);
-    }
-    .wizard button:disabled {
-      opacity: 0.5;
-      cursor: default;
-    }
-    /* Центрируем чекбоксы на шаге 4 */
+    .wizard .btn-next { background:var(--blue); color:var(--white) }
+    .wizard .btn-prev { background:#444; color:var(--white) }
+    .wizard button:disabled { opacity:.5; cursor:default }
     .wizard .step[data-step="4"] #extras-container {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      align-items: flex-start;
-      max-width: 90%;
-      margin: 0 auto 16px;
+      display:flex; flex-direction:column; gap:8px;
+      align-items:flex-start; max-width:90%; margin:0 auto 16px;
     }
     .wizard .step[data-step="4"] #extras-container label {
-      color: var(--white);
+      color:var(--white);
     }
   </style>
 </head>
 <body>
 
-  <div class="wizard">
-    <header>
-      <img src="logo.png" alt="Show Today">
-    </header>
+  <div class="wrapper">
+    <div class="wizard">
+      <header>
+        <img src="logo.png" alt="Show Today">
+      </header>
 
-    <!-- Шаг 1 -->
-    <div class="step active" data-step="1">
-      <h2>1. Выберите формат</h2>
-      <label><input type="radio" name="mode" value="studio">В студии</label>
-      <label><input type="radio" name="mode" value="outdoor">Выезд</label>
-      <div class="buttons">
-        <button class="btn-prev" disabled>← Назад</button>
-        <button class="btn-next" disabled>Далее →</button>
+      <!-- Шаг 1 -->
+      <div class="step active" data-step="1">
+        <h2>1. Выберите формат</h2>
+        <label><input type="radio" name="mode" value="studio"> В студии</label>
+        <label><input type="radio" name="mode" value="outdoor"> Выезд</label>
+        <div class="buttons">
+          <button class="btn-prev" disabled>← Назад</button>
+          <button class="btn-next" disabled>Далее →</button>
+        </div>
       </div>
-    </div>
-
-    <!-- Шаг 2 -->
-    <div class="step" data-step="2">
-      <h2>2. Дата и время</h2>
-      <label>Дата:
-        <input id="date-picker" readonly placeholder="– выберите дату –">
-      </label>
-      <label>Время:
-        <select id="time-select">
-          <option value="">– выберите время –</option>
-        </select>
-      </label>
-      <div class="buttons">
-        <button class="btn-prev">← Назад</button>
-        <button class="btn-next" disabled>Далее →</button>
+      <!-- Шаг 2 -->
+      <div class="step" data-step="2">
+        <h2>2. Дата и время</h2>
+        <label>Дата:
+          <input id="date-picker" readonly placeholder="– выберите дату –">
+        </label>
+        <label>Время:
+          <select id="time-select">
+            <option value="">– выберите время –</option>
+          </select>
+        </label>
+        <div class="buttons">
+          <button class="btn-prev">← Назад</button>
+          <button class="btn-next" disabled>Далее →</button>
+        </div>
       </div>
-    </div>
-
-    <!-- Шаг 3 -->
-    <div class="step" data-step="3">
-      <h2>3. Подробности</h2>
-      <label>Количество человек:
-        <input type="number" id="count" min="1" value="1">
-      </label>
-      <label id="address-container" style="display:none;">
-        Адрес (для выезда):
-        <input type="text" id="address">
-      </label>
-      <label>Программа:
-        <select id="program">
-          <option value="">– выберите –</option>
-          <option value="classic">Классика</option>
-          <option value="musicality">Музыкалити</option>
-          <option value="battle">Battle Show</option>
-          <option value="lotto">Музыкальное лото</option>
-          <option value="kids">Детский формат</option>
-          <option value="quiz">Квиз-мафия</option>
-          <option value="21plus">21+</option>
-        </select>
-      </label>
-      <label>Средний возраст:
-        <input type="number" id="age" min="1" value="18">
-      </label>
-      <label>Сколько раз были у нас:
-        <input type="number" id="visits" min="0" value="0">
-      </label>
-      <label>Повод праздника:
-        <textarea id="occasion" rows="2"></textarea>
-      </label>
-      <div class="buttons">
-        <button class="btn-prev">← Назад</button>
-        <button class="btn-next" disabled>Далее →</button>
+      <!-- Шаг 3 -->
+      <div class="step" data-step="3">
+        <h2>3. Подробности</h2>
+        <label>Количество человек:
+          <input type="number" id="count" min="1" value="1">
+        </label>
+        <label id="address-container" style="display:none;">
+          Адрес (для выезда):
+          <input type="text" id="address">
+        </label>
+        <label>Программа:
+          <select id="program">
+            <option value="">– выберите –</option>
+            <option value="classic">Классика</option>
+            <option value="musicality">Музыкалити</option>
+            <option value="battle">Battle Show</option>
+            <option value="lotto">Музыкальное лото</option>
+            <option value="kids">Детский формат</option>
+            <option value="quiz">Квиз-мафия</option>
+            <option value="21plus">21+</option>
+          </select>
+        </label>
+        <label>Средний возраст:
+          <input type="number" id="age" min="1" value="18">
+        </label>
+        <label>Сколько раз были у нас:
+          <input type="number" id="visits" min="0" value="0">
+        </label>
+        <label>Повод праздника:
+          <textarea id="occasion" rows="2"></textarea>
+        </label>
+        <div class="buttons">
+          <button class="btn-prev">← Назад</button>
+          <button class="btn-next" disabled>Далее →</button>
+        </div>
       </div>
-    </div>
-
-    <!-- Шаг 4 -->
-    <div class="step" data-step="4">
-      <h2>4. Дополнительные услуги</h2>
-      <div id="extras-container">
-        <label><input type="checkbox" name="extras" value="restroom"> Комната отдыха</label>
-        <label><input type="checkbox" name="extras" value="photographer"> Фотограф</label>
-        <label><input type="checkbox" name="extras" value="videographer"> Видеограф</label>
-        <label><input type="checkbox" name="extras" value="disco"> Дискотека</label>
-      </div>
-      <label style="display:block; margin-top:12px; color:var(--white);">
-        Ваши пожелания (необязательно):
-        <textarea id="wishes" rows="3"
-          style="width:100%; padding:8px; margin-top:4px;
-                 background:#222; border:1px solid #444;
-                 color:#fff; border-radius:4px;"
-          placeholder="Например: хотелось бы торт…"></textarea>
-      </label>
-      <div class="buttons" style="margin-top:16px;">
-        <button class="btn-prev">← Назад</button>
-        <button class="btn-next" id="finish-btn">Записаться</button>
+      <!-- Шаг 4 -->
+      <div class="step" data-step="4">
+        <h2>4. Дополнительные услуги</h2>
+        <div id="extras-container">
+          <label><input type="checkbox" name="extras" value="restroom"> Комната отдыха</label>
+          <label><input type="checkbox" name="extras" value="photographer"> Фотограф</label>
+          <label><input type="checkbox" name="extras" value="videographer"> Видеограф</label>
+          <label><input type="checkbox" name="extras" value="disco"> Дискотека</label>
+        </div>
+        <label style="display:block; margin-top:12px; color:var(--white);">
+          Ваши пожелания (необязательно):
+          <textarea id="wishes" rows="3"
+            style="width:100%; padding:8px; margin-top:4px;
+                   background:#222; border:1px solid #444;
+                   color:#fff; border-radius:4px;"
+            placeholder="Например: хотелось бы торт…"></textarea>
+        </label>
+        <div class="buttons" style="margin-top:16px;">
+          <button class="btn-prev">← Назад</button>
+          <button class="btn-next" id="finish-btn">Записаться</button>
+        </div>
       </div>
     </div>
   </div>
 
-  <!-- Кнопка “Готово” -->
+  <!-- Кнопка “Готово” для скрытия клавиатуры на iOS -->
   <button type="button"
-    style="position:fixed;bottom:env(safe-area-inset-bottom,10px);right:10px;
-           padding:8px 12px;background:#444;color:#fff;border:none;
-           border-radius:6px;z-index:1000;"
+    style="
+      position: fixed;
+      bottom: env(safe-area-inset-bottom,10px);
+      right: 10px;
+      padding: 8px 12px;
+      background: #444;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      z-index: 1000;
+    "
     onclick="document.activeElement.blur()"
   >Готово</button>
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    // Telegram
     if (window.Telegram && Telegram.WebApp) Telegram.WebApp.ready();
-
-    // Подгоняем высоту
-    function adjustHeight(){
-      document.body.style.height = (window.visualViewport?.height||window.innerHeight)+'px';
+    function adjustHeight() {
+      document.body.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
     }
     window.visualViewport?.addEventListener('resize', adjustHeight);
     adjustHeight();
 
-    // Шаги
-    const steps = Array.from(document.querySelectorAll('.step'));
+    // отслеживаем открытие клавы
+    window.visualViewport?.addEventListener('resize', () => {
+      const isOpen = window.visualViewport.height < window.innerHeight;
+      document.body.classList.toggle('keyboard-open', isOpen);
+    });
+    // шаги
+    const steps = [...document.querySelectorAll('.step')];
     let current = 0;
-    const timeSelect       = document.getElementById('time-select');
-    const datePicker       = document.getElementById('date-picker');
-    const countEl          = document.getElementById('count');
-    const addrCont         = document.getElementById('address-container');
-    const addrInput        = document.getElementById('address');
-    const programEl        = document.getElementById('program');
-    const ageEl            = document.getElementById('age');
-    const visitsEl         = document.getElementById('visits');
-    const occasionEl       = document.getElementById('occasion');
+    const timeSelect = document.getElementById('time-select');
+    const datePicker = document.getElementById('date-picker');
+    const countEl    = document.getElementById('count');
+    const addrCont   = document.getElementById('address-container');
+    const addrInput  = document.getElementById('address');
+    const programEl  = document.getElementById('program');
+    const ageEl      = document.getElementById('age');
+    const visitsEl   = document.getElementById('visits');
+    const occasionEl = document.getElementById('occasion');
 
-    // Генерация времени
+    // время
     for (let h=9; h<=22; h++){
       ['00','30'].forEach(m=>{
-        if (h===22 && m==='30') return;
+        if(h===22&&m==='30') return;
         const opt = document.createElement('option');
-        opt.value       = `${h.toString().padStart(2,'0')}:${m}`;
+        opt.value = `${h.toString().padStart(2,'0')}:${m}`;
         opt.textContent = opt.value;
         timeSelect.append(opt);
       });
     }
-
-    // Календарь
-    flatpickr("#date-picker", {
-      dateFormat: "d.m.Y",
-      minDate: "today",
-      onChange: () => validateStep(1)
-    });
+    flatpickr("#date-picker",{ dateFormat:"d.m.Y", minDate:"today", onChange:()=>validateStep(1) });
 
     function showStep(i){
-      steps.forEach((st,idx)=> st.classList.toggle('active', idx===i));
+      steps.forEach((s,idx)=>s.classList.toggle('active', idx===i));
       current = i; validateStep(i);
       const mode = document.querySelector('input[name="mode"]:checked')?.value;
       addrCont.style.display = mode==='outdoor'?'block':'none';
-      if (i===3){
+      if(i===3){
         document.querySelector('.extra-restroom').style.display = mode==='studio'?'flex':'none';
       }
     }
-
     function validateStep(i){
       const btn = steps[i].querySelector('.btn-next');
-      let ok = false;
-      if (i===0){
-        ok = !!document.querySelector('input[name="mode"]:checked');
-      } else if (i===1){
-        ok = !!datePicker.value && !!timeSelect.value;
-      } else if (i===2){
-        ok = Number(countEl.value)>0 &&
-             !!programEl.value &&
-             Number(ageEl.value)>0 &&
-             Number(visitsEl.value)>=0 &&
-             occasionEl.value.trim()!=='' &&
-             (addrCont.style.display==='none'|| addrInput.value.trim()!=='');
-      } else {
-        ok = true;
-      }
+      let ok=false;
+      if(i===0) ok=!!document.querySelector('input[name="mode"]:checked');
+      else if(i===1) ok=!!datePicker.value&&!!timeSelect.value;
+      else if(i===2){
+        ok = Number(countEl.value)>0 && !!programEl.value
+          && Number(ageEl.value)>0 && Number(visitsEl.value)>=0
+          && occasionEl.value.trim()!=='' 
+          && (addrCont.style.display==='none' || addrInput.value.trim()!=='');
+      } else ok=true;
       btn.disabled = !ok;
     }
-
     document.querySelectorAll('.btn-next').forEach(b=>
-      b.addEventListener('click', ()=> current<steps.length-1? showStep(current+1) : finish())
+      b.addEventListener('click',()=> current<steps.length-1? showStep(current+1) : finish())
     );
     document.querySelectorAll('.btn-prev').forEach(b=>
-      b.addEventListener('click', ()=> current>0 && showStep(current-1))
+      b.addEventListener('click',()=> current>0 && showStep(current-1))
     );
     steps.forEach((st,i)=>{
-      st.addEventListener('input', ()=> validateStep(i));
-      st.addEventListener('change', ()=> validateStep(i));
+      st.addEventListener('input',()=>validateStep(i));
+      st.addEventListener('change',()=>validateStep(i));
     });
     document.querySelectorAll('input[name="mode"]').forEach(r=>
-      r.addEventListener('change', ()=> validateStep(0))
+      r.addEventListener('change',()=>validateStep(0))
     );
     validateStep(0);
 
     function finish(){
-      const extras = Array.from(document.querySelectorAll('input[name="extras"]:checked'))
-                          .map(ch=>ch.value);
+      const extras = [...document.querySelectorAll('input[name="extras"]:checked')].map(ch=>ch.value);
       const data = {
-        mode:      document.querySelector('input[name="mode"]:checked').value,
-        date:      datePicker.value,
-        time:      timeSelect.value,
-        count:     countEl.value,
-        address:   addrInput.value||'',
-        program:   programEl.value,
-        age:       ageEl.value,
-        visits:    visitsEl.value,
-        occasion:  occasionEl.value,
-        extras,
-        wishes:    document.getElementById('wishes').value.trim()
+        mode: document.querySelector('input[name="mode"]:checked').value,
+        date: datePicker.value,
+        time: timeSelect.value,
+        count: countEl.value,
+        address: addrInput.value||'',
+        program: programEl.value,
+        age: ageEl.value,
+        visits: visitsEl.value,
+        occasion: occasionEl.value,
+        extras, wishes: document.getElementById('wishes').value.trim()
       };
-      if (window.Telegram?.WebApp?.sendData){
+      if(window.Telegram?.WebApp?.sendData){
         Telegram.WebApp.sendData(JSON.stringify({action:'booking',payload:data}));
-      } else {
-        console.log('Mock sendData:', data);
-      }
+      } else console.log('Mock send:',data);
       steps[current].innerHTML = `
-        <p style="
-          color:white;
-          text-align:center;
-          padding:40px 20px;
-          line-height:1.5;
-        ">
-          Спасибо!<br>С вами свяжется администратор для уточнения деталей.
-        </p>
-      `;
+        <p style="color:white; text-align:center;
+                  padding:40px 20px; line-height:1.5;">
+          Спасибо!<br>С вами свяжется администратор.
+        </p>`;
     }
   </script>
 </body>
