--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             style="width:100%; padding:8px; margin-top:4px;
                    background:#222; border:1px solid #444;
                    color:#fff; border-radius:4px;"
-            placeholder="Например: хотелось бы торт…"></textarea>
+            placeholder="Например: пусть ведущий поздравит именинника после шоу или сделайте больше подвижных конкурсов…"></textarea>
         </label>
         <div class="buttons" style="margin-top:16px;">
           <button class="btn-prev">← Назад</button>
